# ierahkwa-platform

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .npmrc  ACCESSIBILITY.md  ARCHITECTURE.md  AUDIT-v2.8.0.md  AUDITORIA-COMPLETA-2026-02-22.md  BLUEPRINT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COORDINACION-AGENTES.md  DEPLOYMENT.md  GUIA-DEL-PROYECTO.md  INVESTOR-PRESENTATION-DETAILED.md  LICENSE  MANIFESTO.md  MASTER-PRICING-AND-LICENSING.md  Makefile  PLAN-IMPLEMENTACION-MICROSERVICIOS-58.md  README-github.md  README.md  SECURITY.md  WHITEPAPER.md  deploy-ierahkwa.sh  docker-compose.dev.yml  docker-compose.enterprise.yml  docker-compose.infra.yml  docker-compose.production.yml  docker-compose.sovereign.yml  jest.config.js  package.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: accessibility-issue.yml  agentic-workflow-request.yml  bug_report.md  feature_request.md
.github/workflows/: accessibility.yml  build-and-deploy.yml  ci.yml  (+11 more)
01-documentos/: DEVELOPER-BOUNTY-PROGRAM.md  FIRST_DAY_MANUAL.md  OFFLINE_COMMS_GUIDE.md  USER_GUIDE.md
02-plataformas-html/: README.md  index.html
05-api/: openapi.yaml
07-scripts/: INSTALAR-TODO.sh  backup-database.sh  backup-soberano.sh  backup-todas-plataformas.sh  captive-portal-redirect.sh  copiar-sovereign-a-extreme-pro.sh  custom-rules.json  deploy-wifi.sh  deploy.sh  generate-server-plans-pdf.py  generate-sln.sh  health-monitor.sh  rotate-keys.sh  sast-autofix.js  sast-scanner.js  sca-scanner.js  setup-cron-backups.sh  setup-ssl.sh  setup-wifi-production.sh  start-production.sh  supply-chain-audit.js  test-live.sh  test-wifi-e2e.sh
08-dotnet/: Mamey.sln
10-core/MameyNode/: Cargo.toml
10-core/MameyNode/src/: main.rs
10-core/MameyNode/src/api/: mod.rs
10-core/MameyNode/src/blockchain/: account.rs  block.rs  mod.rs  state.rs  token.rs  transaction.rs
10-core/MameyNode/src/config/: mod.rs
10-core/MameyNode/src/consensus/: mod.rs
10-core/MameyNode/src/crypto/: mod.rs
10-core/MameyNode/src/network/: mod.rs
10-core/MameyNode/src/storage/: mod.rs
12-rust/mamey-forge/: Cargo.toml  README.md
12-rust/mamey-forge/ci/: check.sh
12-rust/mamey-forge/docs/: commands.md  configuration.md  contract-api.md  deployment.md  getting-started.md  project-structure.md  templates.md  testing.md
12-rust/mamey-forge/examples/counter/: Cargo.toml  README.md
12-rust/mamey-forge/examples/counter/src/: lib.rs
12-rust/mamey-forge/examples/erc20-token/: Cargo.toml  README.md
12-rust/mamey-forge/examples/erc20-token/src/: lib.rs
12-rust/mamey-forge/examples/escrow/: Cargo.toml  README.md
12-rust/mamey-forge/examples/escrow/src/: lib.rs
12-rust/mamey-forge/examples/hello-world/: Cargo.toml  README.md
12-rust/mamey-forge/examples/hello-world/src/: lib.rs
12-rust/mamey-forge/examples/nft/: Cargo.toml  README.md
12-rust/mamey-forge/examples/nft/src/: lib.rs
12-rust/mamey-forge/scripts/: ci.sh
12-rust/mamey-forge/src/: error.rs  main.rs
12-rust/mamey-forge/src/commands/: build.rs  call.rs  clean.rs  deploy.rs  info.rs  init.rs  mod.rs  query.rs  test.rs
12-rust/mamey-forge/src/config/: mod.rs
12-rust/mamey-forge/src/devnet/: mod.rs
12-rust/mamey-forge/templates/basic/: Cargo.toml  README.md  README.md.template  contract.rs  mameyforge.toml.template
12-rust/mamey-forge/templates/basic/src/: lib.rs.template
12-rust/mamey-forge/templates/nft/: Cargo.toml.template  README.md.template
12-rust/mamey-forge/templates/nft/src/: lib.rs.template
12-rust/mamey-forge/templates/token/: Cargo.toml  README.md  README.md.template  contract.rs  mameyforge.toml.template
12-rust/mamey-forge/templates/token/src/: lib.rs.template
12-rust/mamey-node-rust/: Cargo.toml  MIGRATION.md  README.md  build.rs
12-rust/mamey-node-rust/examples/: smoke_test.rs
12-rust/mamey-node-rust/src/: error.rs  lib.rs  metadata.rs
12-rust/mamey-node-rust/src/services/: banking.rs  mod.rs  node.rs  rpc.rs
13-ai/mamey-future-ai/: .gitignore  PROJECT_SETUP.md  README.md  docker-compose.yml  pyproject.toml
13-ai/mamey-future-ai/mamey_future_ai/: __init__.py
13-ai/mamey-future-ai/mamey_future_ai/grpc_server/: __init__.py
13-ai/mamey-future-ai/mamey_future_ai/inference/: __init__.py
13-ai/mamey-future-ai/mamey_future_ai/monitoring/: __init__.py
13-ai/mamey-future-ai/mamey_future_ai/registry/: __init__.py
13-ai/mamey-future-ai/mamey_future_ai/training/: __init__.py
13-ai/mamey-future-ai/scripts/: comprehensive-enhance-all.py  comprehensive-enhancement.py  enhance-planning-files.py
14-blockchain/: README.md  deploy-testnet.sh  testnet-config.json
15-smart-contracts/: .env.example  hardhat.config.js  package.json
17-files-originales/: AUDITORIA-ORGANIZACION-2026-02-22.md  INSTALAR-TODO.sh  REORGANIZAR-SOBERANO.sh
ai-training/: Modelfile  README.md  dataset_conciencia.jsonl  train_mediator.py
cdn/: cloudflare-config.json
docs/: API-VERSIONING.md  CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  ierahkwa-operations-manual-v3.3.0.html
e2e/: package.json  playwright.config.js
hardware-node/: README.md  mesh-antenna-specs.md  mobile-node-guide.md  nomad_node_config.yaml  raspberry-pi-setup.sh
k8s/: cert-manager.yml  dns-config.yml  namespace.yml  sealed-secrets.yml
load-tests/: k6-platform.js
mobile/: App.tsx  app.json  package.json
mvp-voz-soberana/: README.md  fix.js  generate-all.js  package.json  server.js  start.sh
nginx/: nginx.conf
pitch/: INVESTOR_PITCH.md  SK_INVESTOR_PITCH.md  government-services.html  investor-presentation.html  investor-report.md  media-kit.md  outreach-emails-COICA.md  outreach-emails-FILAC.md  outreach-emails-NCAI.md  pitch-deck-2026.html  platform-showcase.html  technology-deep-dive.html
scripts/: estado.sh  fix-aria-labels.sh  fix-dockerfiles.sh  generate-dockerfiles.sh  generate-secrets.sh  generate_audit_pdf.py  inject-pwa.sh  levantar-todo.sh  materialize_ierahkwa.py  steganography_bridge.py  wire-platforms.js
sovereign-dns/: README.md  handshake-config.json  setup_hns.sh
(+17414 files in other folders)
