[package]
name = "mamey-node"
version = "1.0.0"
edition = "2021"
authors = ["Mamey-io <dev@mamey.io>"]
description = "MameyNode - High-performance sovereign blockchain node"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# Database
rocksdb = "0.21"
sled = "0.34"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"

# Metrics
prometheus = "0.13"

# Config
config = "0.14"
dotenvy = "0.15"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.9"

[[bin]]
name = "mamey-node"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
