[package]
name = "mamey-node-sdk"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "MameyNode Rust SDK - gRPC client for MameyNode blockchain"
authors = ["Mamey Technologies <info@mamey.io>"]
repository = "https://github.com/Mamey-io/MameyNode.Rust"

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.14"




